# agent-eval-sample

./: .gitignore  CLAUDE.md  README.md  coding-guideline.md  pyproject.toml
knowledge/: sample_faq.md
scenarios/: default_scenarios.json
src/: main.py  models.py
src/agents/: customer_support_agent.py  simulated_user_agent.py
src/evaluation/: dashboard.py  evaluator.py  scenarios.py
src/tools/: knowledge_search.py
